Added sslOn method to transport socket to switch SSL on. This is called from Postgres filter when the filter detects SSL request.
Signed-off-by: Christoph Pakulski <christoph@tetrate.io>

--- a/source/extensions/filters/network/postgres_proxy/BUILD
+++ b/source/extensions/filters/network/postgres_proxy/BUILD
@@ -33,6 +33,7 @@ envoy_cc_library(
         "//include/envoy/stats:stats_macros",
         "//source/common/buffer:buffer_lib",
         "//source/common/network:filter_lib",
+        "//source/extensions/transport_sockets:well_known_names",
     ],
 )
 
